fix(styles): Adjust focus background color for better contrast

--- a/src/css/scarch.css
+++ b/src/css/scarch.css
@@ -34,6 +34,6 @@ button {
 
 input:focus,
 button:focus {
-  background-color: #2285ba;
+  background-color: #0c8fd5;
   border: 2px solid #003cff;
 }
